clusters/dextek/apps/kubevirt/kubevirt/vms/buildbot-nix-master/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: buildbot-nix-master-pool-0
  labels:
    coredns.io/hostname: buildbot-nix-master-0
spec:
  type: LoadBalancer
  selector:
    vm.kubevirt.io/name: buildbot-nix-master-pool-0
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
